Revision history for Perl module WebService::Linode

{{$NEXT}}
    - paymentterm is optional for linode.create and linode.clone

0.16  2014-01-06 09:59:02 EST
    - useragent arg to constructor for custom user agent header

0.15  2013-11-07 12:02:21 EST
    - Treat error code 0 as OK
    - Update to latest API spec:
        - New optional argument for domain_create & domain_update:
            lpm_displaygroup
        - New optional arguments for nodebalancer_config_create and
          nodebalancer_config_update:
            ssl_cert, ssl_key
    - Add deprecation warning when calling getDomainIDbyName &
      getDomainResourceIDbyName

0.14  2013-10-23 11:04:39 EDT
    - Add Mozilla::CA to dependencies.

0.13  2013-09-28 20:05:23 EDT
    - No functional changes in this release.
    - Update link to Linode API docs
    - Clean up POD a bit, remove required/optional parameter headings when list
      is empty
    - https://github.com/mikegrb/WebService-Linode/pull/2 to update older
      change log entries to CPAN::Changes::Spec, thanks @neilbowers

0.12  2013-09-25 14:58:18 EDT
    - Upstream API Changes
        - New methods:
            - Prefixed by account_: estimateinvoice, paybalance, updatecard
            - Prefixed by linode_:  mutate, webconsoletoken
        - New optional args for linode_update:
            - ms_ssh_disabled, ms_ssh_ip, ms_ssh_port, ms_ssh_user
    - Bugfix
        - fix avail_plans requiring optional planid argument
        - verify domain_resource_create and linode_config_create still require
          primary key as avail_plans does in api.spec
    - Dist Creation Changes
        - converted dist creation to milla
        - moved helper scripts to
          https://github.com/mikegrb/WebService-Linode-AuthorUtils

0.11 2012-02-11
    - fix primary keys marked as required param for domain_resource_create and
      linode_config_create (thanks Peter Stephan)
      - note: not fixed upstream yet gen-validation.pl output can not be used